--- a/contactos.html
+++ b/contactos.html
@@ -55,7 +55,7 @@
                   <input class="inputFc" type="text" placeholder="Nombre:">
                 </div>
                 <div class="mb-3 fieldC">
-                  <input class="inputFc" type="email" placeholder="correo:">
+                  <input class="inputFc" type="email" placeholder="Correo:">
                 </div>
                 <div class="mb-3 fieldC">
                   <input  class="inputFc" type="text" placeholder="Celular:">
