--- a/empresas.html
+++ b/empresas.html
@@ -54,8 +54,8 @@
       <div class="row">
         <div class="col-12 bg-gray text-center pt-5 pb-5 seccionSiete">
           <h2>Potencia tu negocio y crece a nivel internacional de forma simple, económica y transparente</h2>
-          <p class="py-3">Ahora con "Money On Time" podrás realizar hasta 100 envíos de forma simultanea a multiples destinatarios. Paga las nóminas de tus colaboradores y servicios de freelance a solo un clic. Invierte tu tiempo en lo que importa y déjanos el resto.</p>
-          <a href="formulario2.html" target="_blank"><button class="boton"><span>Solicitar Servicio</span></button></a>
+          <p class="py-3">Ahora con "Money On Time" podrás realizar hasta 100 envíos de forma simultánea a múltiples destinatarios. Paga las nóminas de tus colaboradores y servicios de freelance a solo un clic. Invierte tu tiempo en lo que importa y déjanos el resto.</p>
+          <a href="formulario2.html"><button class="boton"><span>Solicitar Servicio</span></button></a>
         </div>
       </div>
     </div>
@@ -122,31 +122,31 @@
           <div class="column2">
             <h2>Redes Sociales</h2>
             <div class="row1">
-                <a href="https://www.facebook.com/rosangela.corso.79"><img src="./redessociales/facebook.png" alt=""></a>
-                <a href="https://www.facebook.com/rosangela.corso.79"><label for="">Síguenos en Facebook</label></a> 
+                <a href="https://www.facebook.com/rosangela.corso.79" target="_blank"><img src="./redessociales/facebook.png" alt=""></a>
+                <a href="https://www.facebook.com/rosangela.corso.79" target="_blank"><label for="">Síguenos en Facebook</label></a> 
             </div>
             <div class="row1">
               <a href=""></a>
-                <a href=""><img src="./redessociales/gorjeo.png" alt=""></a>
+                <a href=""><img src="./redessociales/gorjeo.png" alt="" target="_blank"></a>
                 <a href=""><label for="">Síguenos en Twitter</label></a>
             </div>
             <div class="row1">
-                <a href="https://instagram.com/moneyontimear?utm_medium=copy_link"><img src="./redessociales/instagram.png" alt=""></a>
-                <a href="https://instagram.com/moneyontimear?utm_medium=copy_link"><label for="">Síguenos en Instagram</label></a>
+                <a href="https://instagram.com/moneyontimear?utm_medium=copy_link" target="_blank"><img src="./redessociales/instagram.png" alt=""></a>
+                <a href="https://instagram.com/moneyontimear?utm_medium=copy_link" target="_blank"><label for="">Síguenos en Instagram</label></a>
             </div>
             <div class="row1">
-                <a href=""><img src="./redessociales/youtube.png" alt=""></a>
+                <a href=""><img src="./redessociales/youtube.png" alt="" target="_blank"></a>
                 <a href=""><label for="">Síguenos en Youtube</label></a>
             </div>
             <div class="row1">
-                <a href=""><img src="./redessociales/telegram.png" alt=""></a>
+                <a href=""><img src="./redessociales/telegram.png" alt="" target="_blank"></a>
                 <a href=""><label for="">Síguenos en Telegram</label></a>
             </div>
           </div>
           <div class="column3">
             <h2>Información de Contactos</h2>
             <div class="row2">
-                <img src="./redessociales/inconocasa (1).png" alt="">
+                <img src="./redessociales/inconocasa (1).png" alt="" >
                 <label for="">Ciudad Autónoma de Buenos Aires, Republica de Argentina </label>
             </div>
             <div class="row2">
