--- a/contactos.html
+++ b/contactos.html
@@ -44,34 +44,28 @@
   </header>
   <main>
     <div>
-      <div class="seccionQuince">
-        <div class="container-fluid text-center seccionDieciseis">
-          <h1 class="h1AC"></h1>
-          <div>
-            <form class="formC" action="">
-              <fieldset>
-                <legend >Contactanos</legend>
-                <div class="mb-3 fieldC">
-                  <input class="inputFc" type="text" placeholder="Nombre:">
-                </div>
-                <div class="mb-3 fieldC">
-                  <input class="inputFc" type="email" placeholder="Correo:">
-                </div>
-                <div class="mb-3 fieldC">
-                  <input  class="inputFc" type="text" placeholder="Celular:">
-                </div>
-                <div class="mb-3 fieldC">
-                  <textarea  class="inputFc" name="" id="" cols="30" rows="10" placeholder="Déjanos tu comentario"></textarea>
-                </div>
-                <div class="mb-3 text-center">
-                  <button class="boton">Enviar</button>
-                </div>
-              </fieldset>
-            </form>
-          </div>
-          </div>
+      <div class="container-fluid seccionQuince ">
+        <form class="formC" action="">
+          <fieldset>
+            <legend >Contactanos</legend>
+            <div class="mb-3 fieldC">
+              <input class="inputFc" type="text" placeholder="Nombre:">
+            </div>
+            <div class="mb-3 fieldC">
+              <input class="inputFc" type="email" placeholder="Correo:">
+            </div>
+            <div class="mb-3 fieldC">
+              <input  class="inputFc" type="text" placeholder="Celular:">
+            </div>
+            <div class="mb-3 fieldC">
+              <textarea  class="inputFc" name="" id="" cols="30" rows="10" placeholder="Déjanos tu comentario"></textarea>
+            </div>
+            <div class="mb-3 text-center">
+              <button class="boton">Enviar</button>
+            </div>
+          </fieldset>
+        </form>
       </div>
-    </div>
   </main>
   <footer>
     <div class="footer">
