--- a/formulario2.html
+++ b/formulario2.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row containerForm2">
           <div class="col-12">
-            <a href="empresas.html" target="_blank"><button class="botonR"><span>Regresar</span></button></a>  
+            <a href="empresas.html"><button class="botonR"><span>Regresar</span></button></a>  
               <form class="form2" action="">
                   <fieldset class="fieldset2">
                       <legend class="legend2 mb-3">Consiga una cuenta para empresas</legend>
