--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
     <div class="container">
       <div class="row ">
-        <div class="col-12 bg-white text-center seccionDos py-3 pt-5 pb-5 ">
+        <div class="col-12 bg-white text-center seccionDos py-3 pt-3 pb-3 ">
           <h2 class="text-center ">La forma más confiable y segura de enviar dinero al extranjero</h2>
           <h3 class="gray text-center">El momento es ahora</h3>
           <a href="nosotros.html" target="_blank"><button class="boton"><span>Leer Más...</span></button></a>
@@ -161,11 +161,11 @@
     <div class="container bg-white">
       <div class="row ">
         <div class="col-12 seccionCuatro">
-          <div class="col-6 py-5 carouselM seccionCuatro1">
-            <img src="./img/Imagen-Money-On-Time-para-fin-de-semana.gif" width="500px
+          <div class="col-6 py-3 carouselM seccionCuatro1">
+            <img  src="./img/Imagen-Money-On-Time-para-fin-de-semana.gif" width="380px
             " alt="">
           </div>
-          <div class="col-6 py-5 pb-5 list1 seccionCuatro1">
+          <div class="col-6 py-3 list1 seccionCuatro1">
             <div>
               <img src="./img/viñetas.png" alt="">
               <label for="">Envíos Rápidos y Seguros</label>
@@ -189,7 +189,7 @@
     </div>
   </main>
   <footer>
-    <div class="footer py-3 pb-0">
+    <div class="footer pb-0">
       <div class="container-footer-all ">
         <div class="container-fluid container-footer1">
           <div class="column1">
@@ -210,10 +210,6 @@
             <div class="row1">
                 <a href="https://instagram.com/moneyontimear?utm_medium=copy_link"><img src="./redessociales/instagram.png" alt=""></a>
                 <a href="https://instagram.com/moneyontimear?utm_medium=copy_link"><label for="">Síguenos en Instagram</label></a>
-            </div>
-            <div class="row1">
-                <a href=""><img src="./redessociales/youtube.png" alt=""></a>
-                <a href=""><label for="">Síguenos en Youtube</label></a>
             </div>
             <div class="row1">
                 <a href=""><img src="./redessociales/telegram.png" alt=""></a>
